personal-testing/full-stack-app/frontend/src/components/header/header.css
.swiper {
  --swiper-theme-color: var(--clr-main-9);
  position: relative;
}

.swiper-slide {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 70vh;
  background-color: #ccc;
  color: #fff;
}

.swiper-button-prev,
.swiper-button-next {
  margin: 0 1em;
}

.swiper__background {
  width: 100%;
  height: 100%;
  object-fit: cover;
  position: absolute;
  z-index: -10;
}

.swiper__background--overlay {
  width: 100%;
  height: 100%;
  background: linear-gradient(
    to right,
    rgba(130, 201, 30, 0.1),
    rgba(130, 201, 30, 0.1) 35%,
    rgba(130, 201, 30, 0) 100%
  );
  position: absolute;
  z-index: -5;
}

.swiper__content {
  width: 65%;
  max-width: 1200px;
  margin: auto;
}

.swiper__content__title {
  margin-bottom: 0em;
}

.swiper__content__desc {
  font-size: 1.8em;
  margin-bottom: 2.4em;
}

.swiper__link {
  color: #fff;
}

